Fix: better readability in navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -618,7 +618,7 @@ pre.chroma {
 .navbar-dark .navbar-nav .nav-link.active,
 .navbar-dark .navbar-nav .nav-link.show,
 .navbar-dark .navbar-nav .show>.nav-link {
-    color: #040b1e;
+    color: rgba(255,255,255,.75);
 }
 
 .navbar-toggler:focus {
